Version 6.62
============
Bug fixes:
- Fixed dialog destruction              
- Fixed multithreaded window creation
- Fixed TintBitmap for 16 bit colours
- The close button on docked dockers now works. 

Changes:
--------
- OnInitailUpdate is now called after Attach or AttachDlgItem
- IsChild now takes a HWND arguement.

Version 6.6
===========
Changes
-------
* The number of arguments have changed for WndProc and WndProcDefault.
  - The HWND paramater has been dropped in both of these functions. It's
    presence was redundant and possibly confusing. Users will need to modify
    their WndProc and WndProc functions accordingly. If needed, the m_hWnd 
    member variable can be used in place of hwnd within the WndProc function.
* The number of arguments have changed for DialogProc and DialogProcDefault.
  - The HWND paramater has been dropped in both of these functions. It's
    presence was redundant and possibly confusing. Users will need to modify
    their WndProc and WndProc functions accordingly. If needed, the m_hWnd 
    member variable can be used in place of hwnd in the WndProc function.  
* Enhancements to docking, containers and tabs.
  - By default the dockers are immediately resized while the splitter bar is 
     being dragged. To defer resizing until the splitter bar is released, use
     SetDragAutoResize(FALSE).
  - The close and list buttons now indicate when they are hot and pressed.
  - Added SetTabText, SetTabImage and SwapTabs to the CTab class.
  - Minor improvements to the painting of tabs, containers and dockers.
* Enhancements to GDI graphics support.
  - The CDC class has been extended. It now includes wrapper functions for 
     the Device Context related functions.
  - Added the CBitmapInfoPtr class. This simplifies the use of the BITMAPINFO
     structure in functions like GetDIBits and SetDIBits.
  - Added GrayScaleBitmap function to gdi.h. It converts a colored bitmap to
     to grayscale.     
* Automated menu updating.